--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-tap-event-plugin": "^3.0.3"
   },
