--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
     "material-ui": "^0.20.2",
+    "material-ui-image": "^3.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal-login": "^1.3.4",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
