--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "mongoose": "^5.5.8",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "prop-types": "^15.7.2",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
