--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "bugs": {
     "url": "https://github.com/zaiverse/LetsGo0/issues"
   },
-  "homepage": "https://github.com/zaiverse/LetsGo0#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "gh-pages": "^2.0.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
